added "code" icon to sprite
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.5@4729 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-buttons.less
+++ b/web/css/a-buttons.less
@@ -503,10 +503,12 @@ input.a-ui.a-btn
   &.a-paypalbutton > .icon { background-position: @bgleft -1940px; }
   &.a-wufooform > .icon { background-position: @bgleft -1960px; }
   &.a-close-big > .icon { background-position: @bgleft -1980px; }
-  &.a-etsy > .icon { background-position: @bgleft -2000px; }  
-  &.a-bettertwitter > .icon { background-position: @bgleft -2020px; }    
+  &.a-etsy > .icon { background-position: @bgleft -2000px; }
+  &.a-bettertwitter > .icon { background-position: @bgleft -2020px; }
   &.a-map > .icon { background-position: @bgleft -2040px; } // TODO Make Google Maps Icon
   &.a-google-maps > .icon { background-position: @bgleft -2040px; } // TODO Make Google Maps Icon
+  &.a-code > .icon { background-position: @bgleft -2060px; } // TODO Make Google Maps Icon
+
 }
 
 // White Icons
